Complete basic styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>dog aDOMption</title>
     <link rel='stylesheet' href='./appcss.css' >
+    <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Serif" rel="stylesheet">
   </head>
   <body>
     <div>
