--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div>
-      <h1>aDOMpt a dog!</h1>
+      <div>
+        <h1>aDOMpt a dog!</h1>
+      </div>
       <div class='page-contents'>
         <div class="dogs">
           <ul class="dog-master-list">
@@ -27,6 +29,28 @@
             </ul>
           </div>
         </div>
+      </div>
+      <div class='contact-icons'>
+        <a href='https://github.com/lsiler23'>
+          <div class='github-icon'>
+            <img
+              class='github-real'
+              width='20'
+              height='20'
+              src='https://assets-cdn.github.com/images/modules/logos_page/GitHub-Mark.png'
+              alt='github-link' />
+          </div>
+        </a>
+        <a href='https://www.linkedin.com/in/laurette-siler-b4335569'>
+          <div class='linkedin-icon'>
+            <img
+              class='linkedin-real'
+              width='20'
+              height='20'
+              src='https://png.icons8.com/metro/1600/linkedin.png'
+              alt='linkedin-link' />
+          </div>
+        </a>
       </div>
     </div>
     <script type='text/javascript' src='./dist/strawberryDOM.js'></script>
