--- a/index.html
+++ b/index.html
@@ -16,9 +16,13 @@
           <ul class="dog-master-list">
 
           </ul>
-          <img height='auto' width='500'>
-          <div class='options'>
-            <button id='picker' type="button" name="button">pick me!</button>
+          <div class='picker-and-pic'>
+            <div class='dog-pic'>
+              <img class='dog-img'>
+            </div>
+            <div class='options'>
+              <button id='picker' type="button" name="button">pick me!</button>
+            </div>
           </div>
         </div>
         <div class="dogs-and-options">
