--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
 
           </ul>
           <div class='picker-and-pic'>
-            <div class='dog-pic'>
-              <img class='dog-img'>
-            </div>
+            <div class='dog-pic' style=''></div>
             <div class='options'>
               <button id='picker' type="button" name="button">pick me!</button>
             </div>
